--- a/SistemaInventario/Views/Shared/_Layout.cshtml
+++ b/SistemaInventario/Views/Shared/_Layout.cshtml
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/SistemaInventario.styles.css" asp-append-version="true" />
 </head>
-<body>
+<body class="h-100">
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container">
@@ -22,6 +22,14 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" asp-area="Admin" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                Contenido
+                            </a>
+                            <ul class="dropdown-menu">
+                                <li><a asp-area="Admin" asp-controller="Almacenes" asp-action="Index" class="dropdown-item">Almacen</a></li>
+                            </ul>
+                        </li>
                     </ul>
                     <partial name="_LoginPartial" />
                 </div>
@@ -34,7 +42,7 @@
         </main>
     </div>
 
-    <footer class="border-top footer text-muted">
+    <footer class="border-top text-muted">
         <div class="container">
             &copy; 2024 - SistemaInventario - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
